update Monitoring/Troubleshooting topic[#156180472]

--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -1,28 +1,40 @@
 ---
-title: Troubleshooting PCF Event Alerts
+title: Monitoring and Troubleshooting PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
-This topic describes how to troubleshoot Pivotal Cloud Foundry (PCF) Event Alerts.
+This topic describes how to monitor and troubleshoot Pivotal Cloud Foundry (PCF) Event Alerts.
 
-##<a id='overview'></a> Overview
+##<a id='monitor'></a> Monitor PCF Event Alerts
 
-PCF Event Alerts is deployed as a CF app. 
-By default, this app is called `event-alerts` and is deployed in the `event-alerts` space within the `system` org.
-The `event-alerts` app functions as a nozzle for the Loggregator Firehose and sends email 
-notifications to both a user and space with information regarding matched events.
+PCF Event Alerts is deployed as an app in PCF. By default, this app is called `event-alerts` and is deployed in the `event-alerts` space within the `system` org.
 
-<p class="note warning">
-<strong>WARNING: </strong>
-If an email cannot be sent to both the user and the space, the event is dropped without retrying.
-</p>
+To monitor the performance of PCF Event Alerts or to retrieve troubleshooting information, you can do one or more of the following:
 
-##<a id="errors"></a> Troubleshooting Errors
+* Use the Cloud Foundry Command Line Interface (cf CLI) to obtain logs for the `event-alerts` app. For more information, see [Application Logging in Cloud Foundry](https://docs.pivotal.io/pivotalcf/devguide/deploy-apps/streaming-logs.html). 
+* Use the PCF Metrics service. For more information, see [PCF Metrics](https://docs.pivotal.io/pcf-metrics/index.html).
+* Use the Metrics Forwarder for PCF service. The `event-alerts` app detects if you have an available instance of Metrics Forwarder for PCF, and transmits custom app metrics through Loggregator to the service. For more information, see [Metrics Forwarder for PCF](https://docs.pivotal.io/metrics-forwarder/).  
 
-You might experience the following when using Event Alerts.
+##<a id="scaling"></a> Scaling PCF Event Alerts
 
-###<a id="failed-communication"></a> Event Alerts is Unable to Communicate with CF Notifications
+You may need to scale PCF Event Alerts to improve performance.
 
-To verify this, check the `eva.notificationsStatus` app metric.
-If the value is zero, the last attempt to communicate with CF Notifications failed.
+To scale PCF Event Alerts, perform the following steps:
 
+1. Use the cf CLI to log in to your PCF deployment as an admin. For example:
+	<pre class="terminal">$ cf login
+	API endpoint: http<span>s:</span>//api.sys.cf-example.com
+	Email> admin
+	Password>
+	</pre>
+1. When prompted, select the `system` org and the `event-alerts` space.
+1. Scale up the number of instances of the `event-alerts` app. Two instances should adequately handle most alerting workloads from PCF Healthwatch. For example:
+	<pre class="terminal">$ cf scale event-alerts -i 2</pre>
+	If you are running very large PCF deployments with frequent threshold events, you may need to increase the instance count above two. 
+
+If PCF Event Alerts is receiving frequent event transmissions, you can also do one or both of the following:
+
+* Unsubscribe from alerts that have minimal action.
+* Increase threshold values to supply better indicators for action.
+
+For more information about unsubscribing from alerts and increasing threshold values, see [Using PCF Event Alerts](using.html). 
