--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -7,14 +7,19 @@ This documentation describes Event Alerts for Pivotal Cloud Foundry (PCF).
 
 ## <a id='overview'></a>Overview
 
-PCF Event Alerts is a service that sends event alerts as email and Slack notifications.
+The PCF Event Alerts service gives you the option to set up "alerts" for a variety of events. 
+You can subscribe to notification topics that are monitored by publishers; 
+a publisher is a PCF component that emits events.
+You can send notifications using email, Slack, or webhook integration.
+
+For example, you can subscribe to a topic from [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html)
+that sends a notification when the memory use on a specific VM reaches a certain percentage.
 
 ## <a id='features'></a>Key Features
 
-The Event Alerts service enables you to notify users about events that publishers such as [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html) alert on:
-
 * Send notifications by email to specific users and to distribution lists.
 * Send notifications to Slack channels.
+* Send notifications to a designated URL using webhooks.
 
 ## <a id="snapshot"></a>Product Snapshot
 
