--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -7,7 +7,7 @@ This documentation describes Event Alerts for Pivotal Cloud Foundry (PCF).
 
 ## <a id='overview'></a>Overview
 
-The PCF Event Alerts service gives you the option to set up "alerts" for a variety of events. 
+The PCF Event Alerts service gives you the option to set up alerts for a variety of events. 
 You can subscribe to notification topics that are monitored by publishers; 
 a publisher is a PCF component that emits events.
 You can send notifications using email, Slack, or webhook integration.
