--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -6,6 +6,9 @@ This topic describes how to set up alert destinations and subscribe to alerts.
 This includes setting up the alert destinations as targets, and subscribing those targets to alert topics.
 An example workflow is included below these procedures: the [webhook workflow](#example-workflow-webhook).
 
+PCF Users with admin permissions can run event alert commands and subscribe to alerts. 
+Admins can configure event alerts using the CF CLI.
+
 ##<a id='targets'></a> Create Targets for Alerts
 
 Targets are destinations for alerts and are unique to each user. 
