adding a line about who can use EVA (Admins)

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -15,6 +15,9 @@ You can send notifications using email, Slack, or webhook integration.
 For example, you can subscribe to a topic from [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html)
 that sends a notification when the memory use on a specific VM reaches a certain percentage.
 
+PCF Users with admin permissions can run event alert commands and subscribe to alerts. 
+Admins can configure event alerts using the CF CLI.
+
 ## <a id='features'></a>Key Features
 
 * Send notifications by email to specific users and to distribution lists.
