--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -2,8 +2,8 @@
 title: Using PCF Event Alerts
 owner: PCF Event Alerts
 ---
-This topic describes how to set up alert destinations and subscribe to alerts. 
-This includes setting up the alert destinations as targets, and subscribing those targets to alert topics.
+This topic describes how to configure alert destinations and subscribe to alerts. 
+It explains how to set alert destinations as targets, and how to subscribe those targets to alert topics.
 An example workflow is included below these procedures: the [webhook workflow](#example-workflow-webhook).
 
 ##<a id='targets'></a> Create Targets for Alerts
