--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -16,7 +16,7 @@ For example, you can subscribe to a topic from [PCF Healthwatch](http://docs.piv
 that sends a notification when the memory use on a specific VM reaches a certain percentage.
 
 PCF Users with admin permissions can run event alert commands and subscribe to alerts. 
-Admins can configure event alerts using the Cloud Foundry Command Line Interface tool (cf CLI).
+Admins can configure event alerts using the Cloud Foundry Command Line Interface (cf CLI) tool.
 
 ## <a id='features'></a>Key Features
 
