--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -94,7 +94,8 @@ To create a webhook target, do the following:
       * The `metadata` keys shown (`level`, `foundation`, and `job`) represent what the publisher sends to PCF Event Alerts and may be different for each alert topic.  
 
 ##<a id='subscribe_topics'></a> Subscribe to Alert Topics
-In order for a target to start receiving alerts, you must subscribe it to available alert topics. 
+In order for a target to start receiving alerts, you must subscribe it to available alert topics.
+A topic is an event that is relevant to your system. 
 
 To subscribe a target to one or more alert topics, do the following: 
 
