--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -8,11 +8,11 @@ This documentation describes Event Alerts for Pivotal Cloud Foundry (PCF).
 ## <a id='overview'></a>Overview
 
 The PCF Event Alerts service gives you the option to set up alerts for a variety of events.
-You use the Event Alerts service to subscribe to notification topics -- important events that might occur on your system.
-Notification topics are monitored by publishers -- PCF components that emits events.
+You use the Event Alerts service to subscribe to notification topics --- important events that might occur on your system.
+Notification topics are monitored by publishers --- PCF components that emits events.
 You can send these notifications using email, Slack, or webhook integration.
 
-For example, you can subscribe to a topic from [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html)
+For example, you can subscribe to a topic from PCF Healthwatch
 that sends a notification when the memory use on a specific VM reaches a certain percentage.
 
 PCF Users with admin permissions can run event alert commands and subscribe to alerts. 
