adding more to intro paragraph and a note about webhook integration [#156425178]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -7,6 +7,7 @@ This documentation describes Event Alerts for Pivotal Cloud Foundry (PCF).
 
 ## <a id='overview'></a>Overview
 
+As a PCF admin, you may want to receive notifications about important events that occur on your system. 
 The PCF Event Alerts service gives you the option to set up alerts for a variety of events.
 You use the Event Alerts service to subscribe to notification topics -- important events that might occur on your system.
 Notification topics are monitored by publishers -- PCF components that emits events.
