--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -97,7 +97,7 @@ To create a webhook target, do the following:
       * The `metadata` keys shown (`level`, `foundation`, and `job`) represent what the publisher sends to PCF Event Alerts
        and may be different for each alert topic. 
 
- <p class="note"><strong>Note:</strong> Ensure that the url you specify in the <code>cf-eva-create-target</code> command
+ <p class="note"><strong>Note:</strong> Ensure that the url you specify in the <code>cf eva-create-target</code> command
  is configured to receive webhook requests.</p>
 
 ##<a id='subscribe_topics'></a> Subscribe to Alert Topics
