--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -16,7 +16,7 @@ To monitor the performance of PCF Event Alerts or to retrieve troubleshooting in
 * Use the PCF Metrics service.
   For more information, see [PCF Metrics](https://docs.pivotal.io/pcf-metrics/index.html).
 * Use the Metrics Forwarder for PCF service.
-  The `event-alerts` app detects if you have an available instance of Metrics Forwarder for PCF,
+  The `event-alerts` app detects if you have an available instance of Metrics Forwarder for PCF
   and transmits custom app metrics through Loggregator to the service.
   For more information, see [Metrics Forwarder for PCF](https://docs.pivotal.io/metrics-forwarder/).  
 
