defining UAA notification [#156425178]
rewriting and adding a link to the UAA CF docs where we say that eva-sample-publish requires notification.write scope.

--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -232,7 +232,7 @@ Use the following PCF Event Alert plugin commands to perform various tasks relat
   <tr>
     <td><strong>eva-sample-publish</strong></td>
     <td>
-    Publishes a sample event to all subscribers of the specified topic. This requires a UAA notification.
+    Publishes a sample event to all subscribers of the specified topic. To ussue this command, you must have 'notification.write' [UAA privileges] (https://docs.cloudfoundry.org/concepts/architecture/uaa.html#scopes).
     </td>
   </tr>
   <tr>
