--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -9,8 +9,8 @@ This documentation describes Event Alerts for Pivotal Cloud Foundry (PCF).
 
 As a PCF admin, you may want to receive notifications about important events that occur on your system. 
 The PCF Event Alerts service gives you the option to set up alerts for a variety of events.
-You use the Event Alerts service to subscribe to notification topics --- notable events that might occur.
-Notification topics are monitored by publishers --- PCF components that emit events.
+You can use this service to subscribe to notification topics -- notable events that might occur.
+Notification topics are monitored by publishers -- PCF components that emit events.
 You can send these notifications using email, Slack, or webhook integration.
 
 For example, you can subscribe to a topic from PCF Healthwatch
