--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -13,7 +13,7 @@ You can use this service to subscribe to notification topics -- notable events t
 Notification topics are monitored by publishers -- PCF components that emit events.
 You can send these notifications using email, Slack, or webhook integration.
 
-For example, you can subscribe to a topic from PCF Healthwatch
+For example, you can subscribe to a topic from [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html)
 that sends a notification when the memory use on a specific VM reaches a certain percentage.
 
 PCF Users with admin permissions can run event alert commands and subscribe to alerts. 
