adds prerequisite to using [#156449749]

--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -9,6 +9,15 @@ An example workflow is included below these procedures: see [Example Workflow](#
 PCF Users with admin permissions can run event alert commands and subscribe to alerts. 
 Admins can configure event alerts using the CF CLI.
 
+##<a id='prerequisite'></a> Prerequisite
+
+You must install both the PCF Event Alerts tile and plugin as described in the following topics:
+
+* [Download and Install the PCF Event Alerts Tile](./installing.html#install)
+* [Install the PCF Event Alerts Plugin](./installing.html#plugin)
+
+
+
 ##<a id='targets'></a> Create Targets for Alerts
 
 Targets are destinations for alerts and are unique to each user. 
