--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -15,7 +15,7 @@ You must have the following in order to install PCF Event Alerts:
 + MySQL for PCF v2.0 or later, or external MySQL credentials
 + If you want notifications sent to Slack channels, a Slack account
 
-##<a id='install'></a> Download and Install the Tile
+##<a id='install'></a> Download and Install the PCF Event Alerts Tile
 
 Follow the stops below to download and install the PCF Event Alerts tile:
 
