wordsmithing scaling section

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -67,13 +67,14 @@ Follow the steps below to choose an Availability Zone (AZ) to run PCF Event Aler
 
 ### <a id="event-alerts-alerting-config"></a> (Optional) Configure Scaling Settings
 
+You can scale PCF event alerts by adding additional instances of the app. 
 Follow the steps below to optionally configure Scaling settings.
 
 1. Click **Scaling Settings**.
 
-1. The default instance count for the `event-alerts` app is 2. Environments with a very large number of 
-alerts need to scale to a larger number of instances. Environments that do not require a high availability
-may scale down to 1 instance. 
+1. Set the number of app instances. The default instance count for the `event-alerts` app is two. Environments with a very large number of 
+alerts may need to scale to a larger number of instances. Environments that do not require high availability
+may scale down to one instance. 
 
 1. Click **Save**. 
 
