specifying uaa scopes for sample publish command

--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -241,7 +241,7 @@ Use the following PCF Event Alert plugin commands to perform various tasks relat
   <tr>
     <td><strong>eva-sample-publish</strong></td>
     <td>
-    Publishes a sample event to all subscribers of the specified topic. To ussue this command, you must have <code>notifications.write</code> <a href="https://docs.cloudfoundry.org/concepts/architecture/uaa.html#scopes">UAA privileges</a>.
+    Publishes a sample event to all subscribers of the specified topic. To issue this command, you must have <code>cloud_controller.admin</code>, <code>network.admin</code>, or <code>notifications.write</code> <a href="https://docs.cloudfoundry.org/concepts/architecture/uaa.html#scopes">UAA privileges</a>.
     </td>
   </tr>
   <tr>
