adding screenshot of slack alerts

--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -17,7 +17,6 @@ You must install both the PCF Event Alerts tile and plugin as described in the f
 * [Install the PCF Event Alerts Plugin](./installing.html#plugin)
 
 
-
 ##<a id='targets'></a> Create Targets for Alerts
 
 Targets are destinations for alerts and are unique to each user. 
@@ -69,6 +68,10 @@ To create a Slack target, do the following:
     </pre>
 
     This creates a target named `my-slack-channel` where alerts go to the Slack webhook URL in the command. 
+
+Event alerts to a Slack channel, for example a *Critical Threshold Event* alert and a *Healthy Threshold Event* alert, might appear as follows:
+
+![Sample Slack Alerts](sample-slack-alerts.png)
 
 ### <a id='webhook_targets'></a> Create Webhook Targets
 
