--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -69,7 +69,7 @@ To create a Slack target, do the following:
 
     This creates a target named `my-slack-channel` where alerts go to the Slack webhook URL in the command. 
 
-Event alerts to a Slack channel, for example a *Critical Threshold Event* alert and a *Healthy Threshold Event* alert, might appear as follows:
+Event alerts to a Slack channel, for example a **Critical Threshold Event** alert and a **Healthy Threshold Event** alert, might appear as follows:
 
 ![Sample Slack Alerts](sample-slack-alerts.png)
 
