--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -11,7 +11,7 @@ Admins can configure event alerts using the CF CLI.
 
 ##<a id='prerequisite'></a> Prerequisite
 
-You must install both the PCF Event Alerts tile and plugin as described in the following topics:
+You must install both the PCF Event Alerts tile and plugin as described in the following sections:
 
 * [Download and Install the PCF Event Alerts Tile](./installing.html#install)
 * [Install the PCF Event Alerts Plugin](./installing.html#plugin)
