--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -16,7 +16,7 @@ You can send these notifications using email, Slack, or webhook integration.
 For example, you can subscribe to a topic from [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html)
 that sends a notification when the memory use on a specific VM reaches a certain percentage.
 
-PCF Users with admin permissions can run event alert commands and subscribe to alerts. 
+PCF users with admin permissions can run event alert commands and subscribe to alerts. 
 Admins can configure event alerts using the Cloud Foundry Command Line Interface (cf CLI) tool.
 
 ## <a id='features'></a>Key Features
