--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -6,7 +6,7 @@ This topic describes how to configure alert destinations and subscribe to alerts
 It explains how to set alert destinations as targets, and how to subscribe those targets to alert topics.
 An example workflow is included below these procedures: see [Example Workflow](#example-workflow-webhook).
 
-PCF Users with admin permissions can run event alert commands and subscribe to alerts. 
+PCF users with admin permissions can run event alert commands and subscribe to alerts. 
 Admins can configure event alerts using the CF CLI.
 
 ##<a id='prerequisite'></a> Prerequisite
