adds binary file name [#153629534]

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -170,9 +170,9 @@ The plugin is currently only available to admins.
 
 To install the plugin, do the following:
 
-1. Download the plugin binary from Pivotal Network.
+1. Download the `pcf-event-alerts-cli-plugin-binary` file from Pivotal Network.
 
-1. Run the command `cf install-plugin PATH-TO-BINARY`.
+1. Run the command `cf install-plugin PATH-TO-BINARY-FILE`.
 
 ###<a id='uninstalling'></a> Uninstall the Plugin
 
