adds list of supported publishers

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -3,7 +3,7 @@ title: PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
-This documentation describes Event Alerts for Pivotal Cloud Foundry (PCF).
+This documentation describes Pivotal Cloud Foundry (PCF) Event Alerts.
 
 ## <a id='overview'></a>Overview
 
@@ -24,6 +24,13 @@ Admins can configure event alerts using the Cloud Foundry Command Line Interface
 * Send notifications by email to specific users and to distribution lists.
 * Send notifications to Slack channels.
 * Send notifications to a designated URL using webhooks.
+
+## <a id='publishers'></a>Supported Publishers
+
+PCF Event Alerts v1.0 supports the following publishers:
+
++ PCF Healthwatch. For general information, see [Pivotal Cloud Foundry Healthwatch](https://docs.pivotal.io/pcf-healthwatch/)
++ PCF Event Alerts. This allows PCF Event Alerts to send notifications about itself.
 
 ## <a id="snapshot"></a>Product Snapshot
 
