fixes more typos

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -9,8 +9,8 @@ This documentation describes Pivotal Cloud Foundry (PCF) Event Alerts.
 
 As a PCF admin, you may want to receive notifications about important events that occur on your system. 
 The PCF Event Alerts service gives you the option to set up alerts for a variety of events.
-You can use this service to subscribe to notification topics -- notable events that might occur.
-Notification topics are monitored by publishers -- PCF components that emit events.
+You can use this service to subscribe to notification topics---notable events that might occur.
+Notification topics are monitored by publishers---PCF components that emit events.
 You can send these notifications using email, Slack, or webhook integration.
 
 For example, you can subscribe to a topic from [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html)
@@ -29,7 +29,7 @@ Admins can configure event alerts using the Cloud Foundry Command Line Interface
 
 PCF Event Alerts v1.0 supports the following publishers:
 
-+ PCF Healthwatch. For general information, see [Pivotal Cloud Foundry Healthwatch](https://docs.pivotal.io/pcf-healthwatch/)
++ PCF Healthwatch. For general information, see [Pivotal Cloud Foundry Healthwatch](https://docs.pivotal.io/pcf-healthwatch/).
 + PCF Event Alerts. This allows PCF Event Alerts to send notifications about itself.
 
 ## <a id="snapshot"></a>Product Snapshot
