--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -18,7 +18,7 @@ You must have the following in order to install PCF Event Alerts:
 
 ##<a id='install'></a> Download and Install the PCF Event Alerts Tile
 
-Follow the stops below to download and install the PCF Event Alerts tile:
+Follow the procedures below to download and install the PCF Event Alerts tile:
 
 1. Download the product file from [Pivotal Network](https://network.pivotal.io/).
 
