finalizes rel date and ver num[#157007455]

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -162,8 +162,8 @@ a message similar to the following appears (the version numbers shown may be dif
 ##<a id="plugin"></a> Install the PCF Event Alerts Plugin
 
 You must install the PCF Event Alerts plugin in order to configure notifications.
-You can use this cf CLI plugin to subscribe to topics published by a variety of publishers,
-such as [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html).
+You can use this cf CLI plugin to subscribe to topics published by PCF Healthwatch.
+For general information about PCF Healthwatch, see [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/index.html).
 
 ###<a id='installing'></a> Install the Plugin
 
