--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -169,7 +169,9 @@ To unsubscribe a target from alert topics, do the following:
     * To unsubscribe a target from all topics from a publisher:
       <code>cf eva-unsubscribe TARGET-NAME PUBLISHER --all</code>
 
-    To find `PUBLISHER` and `TOPIC` name(s) run <code>cf eva-topics</code>. The resulting [list](#subscribe_topics) is shown in the procedure above. 
+    To find `PUBLISHER` and `TOPIC` name(s) run <code>cf eva-topics</code>.
+    The resulting list is shown in the procedure, [Subscribe to Alert Topics](#subscribe_topics), above. 
+
     Enter topic names in the command separated by commas.<br><br> 
 
     For example, to unsubscribe the target `my-email` from the `system.cpu.user` topic from the publisher `healthwatch`, run:<br>
