--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -29,10 +29,8 @@ Admins can configure event alerts using the Cloud Foundry Command Line Interface
 
 ## <a id='publishers'></a>Supported Publishers
 
-PCF Event Alerts v1.0 supports the following publishers:
-
-+ PCF Healthwatch. For general information, see [Pivotal Cloud Foundry Healthwatch](https://docs.pivotal.io/pcf-healthwatch/).
-+ PCF Event Alerts. This allows PCF Event Alerts to send notifications about itself.
+PCF Event Alerts v1.1 supports PCF Healthwatch as a publisher.
+For general information about PCF Healthwatch, see [Pivotal Cloud Foundry Healthwatch](https://docs.pivotal.io/pcf-healthwatch/).
 
 ## <a id="snapshot"></a>Product Snapshot
 
@@ -43,11 +41,11 @@ The following table provides version and version-support information about PCF E
     <th>Details</th>
     <tr>
         <td>Tile version</td>
-        <td>v1.0.0</td>
+        <td>v1.1.0</td>
     </tr>
     <tr>
         <td>Release date</td>
-        <td>April 6, 2018</td>
+        <td>April 23, 2018</td>
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
