update rel number to match pivnet

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -5,7 +5,7 @@ owner: PCF Event Alerts
 
 These are release notes for PCF Event Alerts.
 
-##<a id="ver"></a> v1.1.0
+##<a id="ver"></a> v1.1.2
 
 **Release Date:** April 25, 2018
 
@@ -13,7 +13,7 @@ These are release notes for PCF Event Alerts.
 
 Features included in this release:
 
-* Sends Slack and/or email notifications of events that [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html) has alerted on.
+* Sends Slack and email notifications of events that [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html) has alerted on.
 
 ### <a id="known"></a> Known Issues
 
